// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ColorPickerPill/> should render chosen dots as larger 1`] = `
<div
  className="color-picker"
>
  <button
    className="enclosing-circle"
    data-testid="colorDot rgba(0, 0, 0, 0.64)"
    key="rgba(0, 0, 0, 0.64)"
    onClick={[Function]}
    tabIndex={0}
  >
    <div
      className="color-dot"
      style={
        Object {
          "background": "rgba(0, 0, 0, 0.64)",
          "border": undefined,
          "cursor": "pointer",
          "height": "24px",
          "width": "24px",
        }
      }
    />
  </button>
  <button
    className="enclosing-circle"
    data-testid="colorDot rgba(233, 0, 0, 0.64)"
    key="rgba(233, 0, 0, 0.64)"
    onClick={[Function]}
    tabIndex={0}
  >
    <div
      className="color-dot"
      style={
        Object {
          "background": "rgba(233, 0, 0, 0.64)",
          "border": undefined,
          "cursor": "pointer",
          "height": "8px",
          "width": "8px",
        }
      }
    />
  </button>
</div>
`;

exports[`<ColorPickerPill/> should render correctly 1`] = `
<div
  className="color-picker"
>
  <button
    className="enclosing-circle"
    data-testid="colorDot rgba(0, 142, 255, 0.64)"
    key="rgba(0, 142, 255, 0.64)"
    onClick={[Function]}
    tabIndex={0}
  >
    <div
      className="color-dot"
      style={
        Object {
          "background": "rgba(0, 142, 255, 0.64)",
          "border": undefined,
          "cursor": "pointer",
          "height": "8px",
          "width": "8px",
        }
      }
    />
  </button>
  <button
    className="enclosing-circle"
    data-testid="colorDot rgba(38, 196, 58, 0.64)"
    key="rgba(38, 196, 58, 0.64)"
    onClick={[Function]}
    tabIndex={0}
  >
    <div
      className="color-dot"
      style={
        Object {
          "background": "rgba(38, 196, 58, 0.64)",
          "border": undefined,
          "cursor": "pointer",
          "height": "8px",
          "width": "8px",
        }
      }
    />
  </button>
  <button
    className="enclosing-circle"
    data-testid="colorDot rgba(246, 178, 2, 0.64)"
    key="rgba(246, 178, 2, 0.64)"
    onClick={[Function]}
    tabIndex={0}
  >
    <div
      className="color-dot"
      style={
        Object {
          "background": "rgba(246, 178, 2, 0.64)",
          "border": undefined,
          "cursor": "pointer",
          "height": "8px",
          "width": "8px",
        }
      }
    />
  </button>
  <button
    className="enclosing-circle"
    data-testid="colorDot rgba(233, 0, 0, 0.64)"
    key="rgba(233, 0, 0, 0.64)"
    onClick={[Function]}
    tabIndex={0}
  >
    <div
      className="color-dot"
      style={
        Object {
          "background": "rgba(233, 0, 0, 0.64)",
          "border": undefined,
          "cursor": "pointer",
          "height": "8px",
          "width": "8px",
        }
      }
    />
  </button>
</div>
`;

exports[`<ColorPickerPill/> should render outlined dot if provided in props 1`] = `
<div
  className="color-picker"
>
  <button
    className="enclosing-circle"
    data-testid="colorDot rgba(246, 178, 2, 1)"
    key="rgba(246, 178, 2, 1)"
    onClick={[Function]}
    tabIndex={0}
  >
    <div
      className="color-dot"
      style={
        Object {
          "background": "rgba(246, 178, 2, 1)",
          "border": undefined,
          "cursor": "pointer",
          "height": "8px",
          "width": "8px",
        }
      }
    />
  </button>
  <button
    className="enclosing-circle"
    data-testid="colorDot rgba(255, 255, 255, 1)"
    key="rgba(255, 255, 255, 1)"
    onClick={[Function]}
    tabIndex={0}
  >
    <div
      className="color-dot"
      style={
        Object {
          "background": "rgba(255, 255, 255, 1)",
          "border": "solid 1px rgba(0, 0, 0, 1)",
          "cursor": "pointer",
          "height": "6px",
          "width": "6px",
        }
      }
    />
  </button>
</div>
`;
